# devopster-cli

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  devopster-config.template.yaml  metrics.json
.devcontainer/: Dockerfile  post-create.sh
.github/workflows/: auto-fill-pr.yml  cleanup-pages-history.yml  deploy-pages.yml  desktop-app.yml  release-artifacts.yml
docs/: index.html  site.webmanifest
frontend/: app.js  index.html  styles.css
scripts/: install-macos-app.command  install-macos-app.sh  setup.ps1  setup.sh
src/: main.rs  ui.rs
src-tauri/: README.md  tauri.conf.json
src-tauri/src/: lib.rs
src/ai/: mod.rs
src/auth/: mod.rs
src/cli/: catalog.rs  container_runtime.rs  dev_env.rs  init.rs  login.rs  mod.rs  repo.rs  stats.rs  topics.rs
src/config/: mod.rs
src/provider/: azure_devops.rs  github.rs  gitlab.rs  mod.rs
