[package]
name = "devopster-cli"
version = "0.1.0"
edition = "2021"
description = "Cross-platform GitOps CLI for managing organization repositories across GitHub, Azure DevOps, and GitLab."
license = "AGPL-3.0-or-later"
repository = "https://github.com/MicrosoftCloudEssentials-LearningHub/devopster-cli"
rust-version = "1.85"

[[bin]]
name = "devopster"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
